--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  iconsax: ^0.0.8
   intl: ^0.18.0
   timezone: ^0.9.1
   timer_builder: ^2.0.0
   path_provider: ^2.0.11
   path: ^1.8.2
   sqflite: ^2.2.2
+  sqflite_common_ffi: ^2.2.0+1
   flutter_slidable: ^2.0.0
+  drag_and_drop_lists: ^0.3.3
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/timezones.db
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -82,18 +84,21 @@ flutter:
   fonts:
     - family: Poppins
       fonts:
-        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins/Poppins-Regular.ttf
           weight: 400
-        - asset: fonts/Poppins-Medium.ttf
+        - asset: fonts/Poppins/Poppins-Medium.ttf
           weight: 500
-        - asset: fonts/Poppins-SemiBold.ttf
+        - asset: fonts/Poppins/Poppins-SemiBold.ttf
           weight: 600
-        - asset: fonts/Poppins-Bold.ttf
+        - asset: fonts/Poppins/Poppins-Bold.ttf
           weight: 700
-        - asset: fonts/Poppins-ExtraBold.ttf
+        - asset: fonts/Poppins/Poppins-ExtraBold.ttf
           weight: 800
-        - asset: fonts/Poppins-Black.ttf
+        - asset: fonts/Poppins/Poppins-Black.ttf
           weight: 900
+    - family: FluxIcons
+      fonts:
+        - asset: fonts/FluxIcons.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
