Change favorite cities sav system and app font

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -7,69 +7,13 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "5862b6225078e27cc8b7bd29afb84ccc",
-      "css": "alarm",
+      "uid": "51893d7185ec03b4f35b31f25d971d3a",
+      "css": "settings",
       "code": 59397,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M607.9 681.3A52.9 52.9 0 0 1 576.3 670.4L507.9 617.9A196.3 196.3 0 0 1 438.3 475.8V386.2A52.1 52.1 0 0 1 490.4 333.3H490.4A52.1 52.1 0 0 1 541.7 386.7V476.2A92.5 92.5 0 0 0 570.8 535.4L638.7 587.9A51.7 51.7 0 0 1 648.3 660.8 52.5 52.5 0 0 1 607.9 681.3ZM500 910.8A375 375 0 1 1 875 535.8 375 375 0 0 1 500 910.8ZM500 267.1A270 270 0 1 0 770 536.7 270 270 0 0 0 500 267.1ZM69.6 359.2A51.7 51.7 0 0 1 32.5 270.8L193.8 104.2A52.1 52.1 0 0 1 268.3 177.5L107.1 344.2A52.9 52.9 0 0 1 69.6 359.2ZM930.4 359.2A52.9 52.9 0 0 1 892.9 343.3L731.7 176.7A52.1 52.1 0 0 1 806.2 104.2L967.5 270.8A52.5 52.5 0 0 1 967.5 344.6 53.8 53.8 0 0 1 930.4 359.2Z",
-        "width": 1000
-      },
-      "search": [
-        "alarm"
-      ]
-    },
-    {
-      "uid": "da9bd214c276eee12ab30eb19ffdc969",
-      "css": "add",
-      "code": 59396,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 927.1A52.1 52.1 0 0 1 447.9 875V552.1H125A52.1 52.1 0 0 1 125 447.9H447.9V125A52.1 52.1 0 0 1 552.1 125V447.9H875A52.1 52.1 0 0 1 875 552.1H552.1V875A52.1 52.1 0 0 1 500 927.1Z",
-        "width": 1000
-      },
-      "search": [
-        "add"
-      ]
-    },
-    {
-      "uid": "a7c469664f3ba7a61816918adf811e52",
-      "css": "timer",
-      "code": 59395,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M642.5 927.1H357.5A137.9 137.9 0 0 1 254.2 697.9L430.4 500 254.2 302.1A137.9 137.9 0 0 1 357.5 72.9H642.5A137.9 137.9 0 0 1 745.8 302.1L569.6 500 745.8 697.9A137.9 137.9 0 0 1 642.5 927.1ZM500 578.3L333.3 767.1A33.8 33.8 0 0 0 358.7 822.9H643.7A33.8 33.8 0 0 0 666.7 767.1ZM357.5 177.1A33.8 33.8 0 0 0 333.3 232.9L500 421.7 666.7 232.9A33.8 33.8 0 0 0 641.3 177.1Z",
-        "width": 1000
-      },
-      "search": [
-        "timer"
-      ]
-    },
-    {
-      "uid": "b2ddf6386adc9c7db3fd003ef802188f",
-      "css": "stopwatch",
-      "code": 59394,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 955A385.4 385.4 0 1 1 885.4 569.6 385.8 385.8 0 0 1 500 955ZM500 288.3A281.3 281.3 0 1 0 781.3 569.6 281.7 281.7 0 0 0 500 288.3ZM500 621.7A52.1 52.1 0 0 1 447.9 569.6V402.9A52.1 52.1 0 0 1 552.1 402.9V569.6A52.1 52.1 0 0 1 500 621.7ZM645.8 146.2H354.2A52.1 52.1 0 0 1 354.2 41.7H645.8A52.1 52.1 0 1 1 645.8 145.8Z",
-        "width": 1000
-      },
-      "search": [
-        "stopwatch"
-      ]
-    },
-    {
-      "uid": "acee1225d156cd7a15653590c7ccfb9e",
-      "css": "settings",
-      "code": 59393,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 949.6A159.6 159.6 0 0 1 420 929.6L166.7 784.2A172.1 172.1 0 0 1 86.7 645.4V353.8A172.1 172.1 0 0 1 166.7 215.8L418.8 70.4A170 170 0 0 1 578.8 70.4L828.8 215.8A172.1 172.1 0 0 1 908.8 354.6V646.3A172.1 172.1 0 0 1 833.3 784.2L583.3 929.6A159.6 159.6 0 0 1 500 949.6ZM500 154.6A61.7 61.7 0 0 0 472.1 160.4L222.1 305.8A70.8 70.8 0 0 0 194.2 354.6V646.3A69.2 69.2 0 0 0 222.1 695L474.2 840.4A68.7 68.7 0 0 0 530 840.4L780 695A69.2 69.2 0 0 0 807.9 646.3V354.6A70.8 70.8 0 0 0 780 305.8L530 160.4A61.7 61.7 0 0 0 500 154.6ZM500 680A180 180 0 1 1 680 500 180.4 180.4 0 0 1 500 680ZM500 424.2A75.8 75.8 0 1 0 575.8 500 76.3 76.3 0 0 0 500 424.2Z",
+        "path": "M500 939.2A150.8 150.8 0 0 1 425 920.4L175 775.4A161.7 161.7 0 0 1 100 645.4V353.7A161.7 161.7 0 0 1 175 223.7L425 78.3A160.4 160.4 0 0 1 575 78.3L825 223.3A161.7 161.7 0 0 1 900 353.3V645A161.7 161.7 0 0 1 825 775L575 920.4A155 155 0 0 1 500 939.2ZM500 144.2A67.9 67.9 0 0 0 466.7 151.7L216.7 297.1A77.9 77.9 0 0 0 183.3 354.6V646.3A77.9 77.9 0 0 0 216.7 703.8L466.7 849.2A77.9 77.9 0 0 0 533.3 849.2L783.3 703.8A77.9 77.9 0 0 0 816.7 646.3V354.6A77.9 77.9 0 0 0 783.3 297.1L533.3 151.7A67.9 67.9 0 0 0 500 144.2ZM500 669.6A169.6 169.6 0 1 1 669.6 500 169.6 169.6 0 0 1 500 669.6ZM500 413.7A86.2 86.2 0 1 0 586.3 500 86.2 86.2 0 0 0 500 413.7Z",
         "width": 1000
       },
       "search": [
@@ -77,17 +21,73 @@
       ]
     },
     {
-      "uid": "663acc2dcf37dbfc40dd26cb1f128a64",
+      "uid": "ea27543084d9bb0c30636a0ddb450856",
       "css": "clock",
-      "code": 59392,
+      "code": 59396,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M649.6 680A50.4 50.4 0 0 1 619.6 670.4L552.1 622.5 493.3 580.8A140.4 140.4 0 0 1 447.9 530 132.9 132.9 0 0 1 435 460.8L435 317.9A52.5 52.5 0 0 1 487.1 265.4H487.1A52.1 52.1 0 0 1 539.2 317.5L539.2 464.2A32.9 32.9 0 0 0 541.3 483.3 31.3 31.3 0 0 0 552.9 495L612.5 536.7 679.6 584.6A52.1 52.1 0 0 1 649.6 679.2ZM500 942.9A442.9 442.9 0 1 1 942.9 500 443.3 443.3 0 0 1 500 942.9ZM500 161.3A338.8 338.8 0 1 0 838.7 500 339.2 339.2 0 0 0 500 161.3Z",
+        "path": "M649.6 669.6A41.7 41.7 0 0 1 625.4 662.1L557.9 613.8 499.6 572.1A125 125 0 0 1 457.9 525.4 121.7 121.7 0 0 1 445.8 461.7L445.8 317.9A41.7 41.7 0 0 1 487.5 276.3 41.7 41.7 0 0 1 529.2 317.9L529.2 465A41.7 41.7 0 0 0 532.5 488.8 41.7 41.7 0 0 0 547.5 504.2L607.1 545.8 674.2 593.8A41.7 41.7 0 0 1 650 669.2ZM500 932.5A432.5 432.5 0 1 1 932.5 500 433.3 433.3 0 0 1 500 932.5ZM500 150.8A349.2 349.2 0 1 0 849.2 500 349.6 349.6 0 0 0 500 150.8Z",
         "width": 1000
       },
       "search": [
         "clock"
+      ]
+    },
+    {
+      "uid": "b935765054c9fa1705f94ca2bd1510fe",
+      "css": "alarm",
+      "code": 59395,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M607.9 670.8A41.7 41.7 0 0 1 582.5 662.1L514.6 609.6A184.6 184.6 0 0 1 448.8 476.2V386.2A41.7 41.7 0 0 1 490.4 344.6H490.4A41.7 41.7 0 0 1 532.1 386.2V475.8A103.8 103.8 0 0 0 565.4 543.3L633.3 595.8A41.7 41.7 0 0 1 607.9 670.4ZM500 900.4A363.8 363.8 0 1 1 863.8 536.7 364.2 364.2 0 0 1 500 900.4ZM500 256.7A280.4 280.4 0 1 0 780.4 536.7 280.4 280.4 0 0 0 500 256.7ZM83.3 333.3A41.7 41.7 0 0 1 53.8 321.3 41.7 41.7 0 0 1 53.8 262.1L178.8 137.1A41.7 41.7 0 0 1 236.7 196.3L111.7 321.3A41.7 41.7 0 0 1 83.3 333.3ZM916.7 333.3A41.7 41.7 0 0 1 887.1 321.3L762.1 196.3A41.7 41.7 0 1 1 821.3 137.1L946.3 262.1A41.7 41.7 0 0 1 946.3 321.3 41.7 41.7 0 0 1 916.7 333.3Z",
+        "width": 1000
+      },
+      "search": [
+        "alarm"
+      ]
+    },
+    {
+      "uid": "f37ccc18591dd33ff8a03857c24d0ed9",
+      "css": "add",
+      "code": 59394,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 916.7A41.7 41.7 0 0 1 458.3 875V541.7H125A41.7 41.7 0 0 1 125 458.3H458.3V125A41.7 41.7 0 0 1 541.7 125V458.3H875A41.7 41.7 0 0 1 875 541.7H541.7V875A41.7 41.7 0 0 1 500 916.7Z",
+        "width": 1000
+      },
+      "search": [
+        "add"
+      ]
+    },
+    {
+      "uid": "342b0e7b16e4b1cee792d2cfdbf26d5f",
+      "css": "timer",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M642.5 916.7H357.5A127.1 127.1 0 0 1 262.1 705L444.2 500 262.1 295A127.1 127.1 0 0 1 357.5 83.3H642.5A127.1 127.1 0 0 1 737.9 295L555.8 500 737.9 705A127.1 127.1 0 0 1 642.5 916.7ZM500 562.5L324.6 760.4A41.7 41.7 0 0 0 357.5 833.3H642.5A41.7 41.7 0 0 0 675.4 760.4ZM357.5 166.7A41.7 41.7 0 0 0 324.6 239.6L500 437.5 675.4 239.6A41.7 41.7 0 0 0 642.5 166.7Z",
+        "width": 1000
+      },
+      "search": [
+        "timer"
+      ]
+    },
+    {
+      "uid": "70a399c5971bc54d32c161e15fd95008",
+      "css": "stopwatch",
+      "code": 59392,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 944.6A375 375 0 1 1 875 569.6 375 375 0 0 1 500 944.6ZM500 277.9A291.7 291.7 0 1 0 791.7 569.6 291.7 291.7 0 0 0 500 277.9ZM500 611.3A41.7 41.7 0 0 1 458.3 569.6V402.9A41.7 41.7 0 0 1 541.7 402.9V569.6A41.7 41.7 0 0 1 500 611.3ZM645.8 135.8H354.2A41.7 41.7 0 0 1 354.2 52.5H645.8A41.7 41.7 0 1 1 645.8 135.8Z",
+        "width": 1000
+      },
+      "search": [
+        "stopwatch"
       ]
     }
   ]
