--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   sqflite: ^2.2.2
   sqflite_common_ffi: ^2.2.0+1
   flutter_slidable: ^2.0.0
-  drag_and_drop_lists: ^0.3.3
+  shared_preferences: ^2.0.0-nullsafety
 
 dev_dependencies:
   flutter_test:
@@ -82,20 +82,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Poppins
+    - family: Montserrat
       fonts:
-        - asset: fonts/Poppins/Poppins-Regular.ttf
-          weight: 400
-        - asset: fonts/Poppins/Poppins-Medium.ttf
-          weight: 500
-        - asset: fonts/Poppins/Poppins-SemiBold.ttf
-          weight: 600
-        - asset: fonts/Poppins/Poppins-Bold.ttf
-          weight: 700
-        - asset: fonts/Poppins/Poppins-ExtraBold.ttf
-          weight: 800
-        - asset: fonts/Poppins/Poppins-Black.ttf
-          weight: 900
+        - asset: fonts/Montserrat/Montserrat-VariableFont.ttf
+
     - family: FluxIcons
       fonts:
         - asset: fonts/FluxIcons.ttf
