--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   shared_preferences: ^2.0.0-nullsafety
   flutter_system_ringtones: ^0.0.6
-  alarm: ^0.0.5
+  android_alarm_manager_plus: ^2.1.0
 
 dev_dependencies:
   flutter_test:
