Improve alarm customization screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,9 @@ dependencies:
   flutter_system_ringtones: ^0.0.6
   android_alarm_manager_plus: ^2.1.0
   just_audio: ^0.9.31
-  flutter_overlay_window: ^0.3.3
   awesome_notifications: ^0.7.4+1
   audio_session: ^0.1.13
+  awesome_select: ^6.0.0
 
 dev_dependencies:
   flutter_test:
