Add on boot handler and improve dismiss handling

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,14 @@
 buildscript {
     ext.kotlin_version = '1.6.10'
+    ext {
+        compileSdkVersion   = 33            
+        targetSdkVersion    = 33            
+        appCompatVersion    = "1.4.2"       
+    }
     repositories {
         google()
         mavenCentral()
+        
     }
 
     dependencies {
