--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,12 @@ dependencies:
   flutter_slidable: ^2.0.0
   shared_preferences: ^2.0.0-nullsafety
   flutter_system_ringtones: ^0.0.6
-  android_alarm_manager_plus: ^2.1.0
+  android_alarm_manager_plus:
+    path: ../android_alarm_manager_plus
   just_audio: ^0.9.31
   awesome_notifications: ^0.7.4+1
   audio_session: ^0.1.13
   flutter_windowmanager: ^0.2.0
-  navigation_history_observer: ^1.1.0
   flutter_fgbg: ^0.2.2
   move_to_background: ^1.0.2
 
