--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_fgbg: ^0.2.2
   move_to_background: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
+  vibration: ^1.7.6
 
 dev_dependencies:
   flutter_test:
