--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,12 @@ dependencies:
   move_to_background: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
   vibration: ^1.7.6
+  # great_list_view:
+  #   git:
+  #     url: https://github.com/AhsanSarwar45/great_list_view
+  #     ref: master
+  great_list_view:
+    path: ../great_list_view
 
 dev_dependencies:
   flutter_test:
