Fix many bugs :)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   #     ref: master
   great_list_view:
     path: ../great_list_view
+  get_storage: ^2.1.1
+  queue: ^3.1.0+2
 
 dev_dependencies:
   flutter_test:
