--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Layouter", "RGBO", "Tappable", "Unmanaged"]
+  "cSpell.words": ["fullscreen", "Layouter", "RGBO", "Tappable", "Unmanaged"]
 }
