--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   path: ^1.8.2
   sqflite: ^2.2.2
   flutter_slidable: ^2.0.0
-  shared_preferences: ^2.0.0-nullsafety
   flutter_system_ringtones: ^0.0.6
   android_alarm_manager_plus:
     git:
@@ -61,12 +60,12 @@ dependencies:
   move_to_background: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
   vibration: ^1.7.6
-  # great_list_view:
-  #   git:
-  #     url: https://github.com/AhsanSarwar45/great_list_view
-  #     ref: master
   great_list_view:
-    path: ../great_list_view
+    git:
+      url: https://github.com/AhsanSarwar45/great_list_view
+      ref: master
+  # great_list_view:
+  #   path: ../great_list_view
   get_storage: ^2.1.1
   queue: ^3.1.0+2
 
