Add option to schedule alarm on specific dates

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   #   path: ../great_list_view
   get_storage: ^2.1.1
   queue: ^3.1.0+2
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
