--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   get_storage: ^2.1.1
   queue: ^3.1.0+2
   table_calendar: ^3.0.8
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
