Add coverage flag in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,6 @@ jobs:
       with:
         flutter-version: '3.7.3' # or, you can use 1.22
         channel: 'stable'
-    - run: flutter test
+    - run: flutter test --coverage
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
