--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   queue: ^3.1.0+2
   table_calendar: ^3.0.8
   vector_math: ^2.1.4
+  fuzzywuzzy: ^1.1.2
 
 dev_dependencies:
   flutter_test:
