--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   table_calendar: ^3.0.8
   vector_math: ^2.1.4
   fuzzywuzzy: ^1.1.2
+  flex_color_picker: ^3.2.2
 
 dev_dependencies:
   flutter_test:
