Add tests for theme preview card

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "AARRGGBB",
     "Animatable",
     "Cupertino",
     "dartpad",
@@ -9,6 +10,7 @@
     "Layouter",
     "LTWH",
     "RGBO",
+    "RRGGBB",
     "sublist",
     "Tappable",
     "unawaited",
