--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -4,9 +4,9 @@ name: Android Release
 on:
   # 2
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
   # 3
   workflow_dispatch:
