--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flex_color_picker: ^3.2.2
   auto_start_flutter: ^0.1.1
   app_settings: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   dart_code_metrics: ^5.5.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/icon/1024.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
