Change notification icon

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     android:label="Flux Clock"
     tools:replace="android:label"
     android:name="${applicationName}"
-    android:icon="@mipmap/launcher_icon">
+    android:icon="@mipmap/ic_launcher">
     <activity
       android:name=".MainActivity"
       android:exported="true"
