--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   http: ^0.13.6
   introduction_screen: ^3.1.12
+  app_settings: ^5.1.1
+  auto_start_flutter: ^0.1.1
 
 dev_dependencies:
   flutter_test:
