--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -56,10 +56,10 @@ jobs:
         run: flutter pub get
 
       - name: Build APPBUNDLE
-        run: flutter build appbundle
+        run: flutter build appbundle --build-name=$GIT_TAG_NAME
 
       - name: Build APK
-        run: flutter build apk --split-per-abi
+        run: flutter build apk --split-per-abi --build-name=$GIT_TAG_NAME
 
       - name: Create Github Release
         uses: ncipollo/release-action@v1
@@ -68,9 +68,5 @@ jobs:
           # tag: $GIT_TAG_NAME
           # token: ${{ secrets.PERSONAL_RELEASE_TOKEN }}
 
-      - name: Save APPBUNDLE to Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: APPBUNDLE
-          path: build/app/outputs/bundle/release/app-release.aab
+     
    
