--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,6 @@ dependencies:
   vector_math: ^2.1.4
   fuzzywuzzy: ^1.1.2
   flex_color_picker: ^3.2.2
-  flutter_launcher_icons: ^0.13.1
   url_launcher: ^6.2.2
   flutter_html: ^3.0.0-beta.2
   http: ^0.13.6
@@ -86,6 +85,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   dart_code_metrics: ^5.5.1
+  change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "ic_launcher"
